changed styling to prevent overflow to all pages

--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -1,4 +1,18 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden; 
+}
+
 .navbar {
+  width: 100%;
   background-color: #4e958b;
   padding: 10px;
   display: flex;
@@ -8,7 +22,7 @@
 
 .homelogo-container {
   position: relative;
-  margin-right: auto;
+  margin-right: 0; /* Adjust if necessary */
   background: linear-gradient(to bottom, #4e958b, #192f2c);
   padding: 5px;
   border-radius: 10px;
@@ -20,7 +34,7 @@
   content: '';
   position: absolute;
   top: 0;
-  left: -100%;
+  left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0) 50%);
@@ -36,8 +50,6 @@
     left: 100%;
   }
 }
-
-
 
 .homelogo {
   max-height: 110px;
@@ -55,7 +67,7 @@
 }
 
 .nav-links li {
-  margin: 0 30px;
+  margin: 0 20px; /* Adjust spacing to prevent overflow */
 }
 
 .nav-links a {
